# Pyowershades

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pyowershades/: __init__.py  connection.py  const.py  protocol.py
tests/: test_protocol.py
