[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyowershades"
version = "0.1.1"
description = "Asyncio library for PowerShades motorized blinds"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Vem Boynerian", email = "vemboy20@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vemboy200/Pyowershades"
